--- a/Q4.html
+++ b/Q4.html
@@ -19,7 +19,7 @@
     HINT: You'll need a variable for this (call it 'count'). Where should the variable be declared?
     */
 
-    var count = 0; //변수를 함수 안에다 넣으면, 함수를 호출할 떄마다 변수가 0으로 설정됨. 함수안에 있는 변수는 함수밖에서는 없기 떄문에.
+    var count = 0; //변수를 함수 안에다 넣으면, 함수를 호출할 떄마다 변수가 0으로 설정됨. 
 
     function counter() {
       count++
